# tidalist

./: README.md  TODO.md  pyproject.toml
docs/superpowers/plans/: 2026-06-20-tidalist-architecture.md  2026-06-21-albums-and-identity.md  2026-06-21-albums-phase-1.md  2026-06-21-albums-phase-2.md  2026-06-21-albums-phase-3.md  2026-06-21-albums-phase-4.md  2026-06-21-albums-phase-5.md  2026-06-21-albums-phase-6.md  2026-06-22-p2-edition-distance.md  2026-06-23-uniform-realize-slice-1.md  2026-06-23-uniform-realize-slice-2.md  2026-06-23-uniform-realize-slice-3.md  2026-06-23-uniform-realize-slice-4.md
docs/superpowers/specs/: 2026-06-23-uniform-realize-design.md
examples/: classical.html
src/tidalist/: __init__.py  cli.py  config.py
src/tidalist/core/: __init__.py  album.py  brief.py  catalog.py  criteria.py  curate.py  edition.py  errors.py  fidelity.py  golden.py  identifiers.py  ports.py  proposal.py  provenance.py  ranking.py  realize.py  recording.py  resolve.py  spec.py
src/tidalist/metadata/: __init__.py  cache.py  discogs.py  musicbrainz.py  rate_limit.py
src/tidalist/nl/: __init__.py  intent.py
src/tidalist/realize/: __init__.py  tidal.py
src/tidalist/scaruffi/: __init__.py  parse.py
src/tidalist/tidal/: __init__.py  catalog.py  platform.py  session.py
tests/: fakes.py  test_cli.py  test_config.py  test_fakes.py  test_winwood_acceptance.py
tests/core/: test_album.py  test_brief.py  test_catalog.py  test_criteria.py  test_curate.py  test_edition.py  test_fidelity.py  test_golden.py  test_proposal.py  test_ranking.py  test_realize.py  test_recording.py  test_resolver.py  test_spec.py
tests/fixtures/: winwood_intent.json  winwood_query.md
tests/metadata/: test_albums_live.py  test_cache.py  test_discogs.py  test_musicbrainz.py  test_musicbrainz_live.py  test_rate_limit.py
tests/nl/: test_intent.py
tests/realize/: test_edition_distance_live.py  test_tidal.py  test_tidal_live.py  test_track_fallback_live.py
tests/scaruffi/: test_parse.py
tests/tidal/: test_catalog.py  test_mapping.py  test_platform.py  test_session.py
