[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scaruffi-tidal"
version = "1.0.0"
description = "Create Tidal playlists from Piero Scaruffi's classical music recommendations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "discogs-client>=2.3.0",
    "tidalapi>=0.7.0",
]

# The working end-to-end CLI is scaruffi_tidal.py:main (the full
# parse -> Discogs -> Tidal -> playlist pipeline). The legacy cli.py
# auth shell is intentionally NOT wired as the entry point (see TODO.md).
[project.scripts]
scaruffi-tidal = "scaruffi_tidal:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = ["scaruffi_tidal"]

[tool.setuptools.packages.find]
where = ["."]
include = ["domain*", "application*", "infrastructure*"]

[tool.pytest.ini_options]
# src/ holds the new tidalist package; "." keeps the legacy flat packages importable
# so the existing suite stays green during the strangler refactor.
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "integration: hits real external services (deselect with -m 'not integration')",
]
