[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scaruffi-tidal"
version = "1.0.0"
description = "Create Tidal playlists from Piero Scaruffi's classical music recommendations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "discogs-client>=2.3.0",
    "tidalapi>=0.7.0",
    "musicbrainzngs>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

# Legacy flat packages, importable for the remaining legacy tests until Phase G
# removes them. The new tidalist package lives under src/ (see pythonpath below).
[tool.setuptools.packages.find]
where = ["."]
include = ["domain*", "application*", "infrastructure*"]

[tool.pytest.ini_options]
# src/ holds the new tidalist package; "." keeps the legacy flat packages importable
# so the existing suite stays green during the strangler refactor.
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "integration: hits real external services (deselect with -m 'not integration')",
]
