[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tidalist"
version = "1.0.0"
description = "Curate a platform-agnostic golden playlist of recordings, then realize it onto a platform (Tidal now; others later)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "discogs-client>=2.3.0",
    "tidalapi>=0.7.0",
    "musicbrainzngs>=0.7.1",
]

[project.scripts]
tidalist = "tidalist.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tidalist*"]

[tool.pytest.ini_options]
# Package source under src/; "." keeps the tests package importable (tests.fakes).
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "integration: hits real external services (deselect with -m 'not integration')",
]
